objects/DemoJam__c.object
<CustomObject>
    <description>csadsadsad</description>
    <fields>
        <fullName>Case_14256__c</fullName>
        <label>Case 14256 Upd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field_1__c</fullName>
        <label>Field 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_2__c</fullName>
        <label>Field 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Field_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profile_test__c</fullName>
        <label>Profile perfect</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <inlineHelpText>Test this compulsory.</inlineHelpText>
        <label>Test 14256</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DemoJam</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DJNewView</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Case_14256__c</columns>
        <columns>Test__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>DJNewView_Changed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DemoJamNewView</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Case_14256__c</columns>
        <columns>Test__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>DemoJamNewViewChanged</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>DemoJam Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DemoJams</pluralLabel>
    <recordTypes>
        <fullName>Test_1</fullName>
        <active>true</active>
        <label>Test 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test_2</fullName>
        <active>true</active>
        <label>Test 2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>